<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/celsius"
            android:text="@string/celcius"
            android:layout_margin="@dimen/margin_tiny"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fahrenheit"
            android:text="@string/fahrenheit"
            android:layout_margin="@dimen/margin_tiny"/>
    </RadioGroup>
    <TextView
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:text="@string/ok"
        android:layout_gravity="right"
        android:textSize="17sp" />

</LinearLayout>