...
            android:layout_height="wrap_content"
            android:id="@+id/icon"
            app:srcCompat="@drawable/ic_plus"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_city"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/yandexLogo"
        android:layout_width="60dp"
        android:layout_height="30dp"
...
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/fab_margin"
            android:textSize="17sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>
